[package]
name = "omalley-aoc2024"
version = "0.0.1"
authors = ["Owen O'Malley <omalley@apache.org>"]
edition = "2021"
license = "GPL"
homepage = "https://github.com/omalley/advent_of_code_2024"
repository = "https://github.com/omalley/advent_of_code_2024"
keywords = ["aoc", "advent", "example"]
description = "Owen's Solutions to AoC 2024"

[dependencies]
argh = "0.1"
array2d = "0.3"
chrono = "0.4"
colored = "2"
itertools = "0.13"
num-integer = "0.1"
paste = "1.0"
priority-queue = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
smallvec = "1.11"
strum = "0.26"
strum_macros = "0.26"
tiny-skia = "0.11"
union-find="0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.test]
opt-level = 3

[profile.release]
panic = "abort"
debug = true
lto = "fat"

# The profile to benchmark with (`cargo run --profile benchmark`)
[profile.benchmark]
inherits = "release"
debug = false
lto = "fat"

[profile.bench]
inherits = "release"
debug = false
lto = "fat"

[[bench]]
name = "bench"
harness = false
